# gitpod-python

./: .gitattributes  .gitignore  Dockerfile  bitbucket-pipelines.yml  pyproject.toml
.github/workflows/: build.yml  download.sh
extensions/: dbaeumer-vscode-eslint.vsix  formulahendry-code-runner.vsix  foxundermoon-shell-format.vsix  github-github-vscode-theme.vsix  mangeshrex-everblush.vsix  monokai-theme-monokai-pro-vscode.vsix  ms-azuretools-vscode-docker.vsix  ms-python-pylint.vsix  ms-python-python.vsix  ms-python-vscode-pylance.vsix  ms-toolsai-jupyter-renderers.vsix  ms-toolsai-jupyter.vsix  redhat-vscode-xml.vsix  redhat-vscode-yaml.vsix  timonwong-shellcheck.vsix  vscode-icons-team-vscode-icons.vsix  wakatime-vscode-wakatime.vsix
scripts/: async_download_exts.py  download_exts.py  exts
