[tool.poetry]
name = "gitpod_images_python"
version = "0.1.0"
description = ""
authors = ["RONY <iamrony777@pm.me>"]

[tool.poetry.dependencies]
python = "^3.8"
httpx = {extras = ["http2"], version = "^0.23.0"}
lxml = "^4.9.1"
aiofiles = "^22.1.0"
humanize = "^4.4.0"
tqdm = "^4.64.1"

[tool.poetry.dev-dependencies]
black = "^22.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
